--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: objective-c
-
 osx_image: xcode7.3.1
-xcode_sdk: iphonesimulator9.0
-
+xcode_sdk: iphonesimulator9.3
+before_install:
+    - brew update
+    - brew install xctool
 script: 'sh ci.sh'
