--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: objective-c
 osx_image: xcode7.3.1
 xcode_sdk: iphonesimulator9.3
-script: 'sh ci.sh'
+script: 
+- set -o pipefail
+- sh ci.sh
