--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: objective-c
 osx_image: xcode7.3.1
 xcode_sdk: iphonesimulator9.3
-script: 
-- set -o pipefail
-- sh ci.sh
+script: sh ci.sh
