--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
-osx_image: xcode7.3.1
+osx_image: xcode7.3
+xcode_project: StravaKit.xcodeproj
+xcode_scheme: StravaDemo
 xcode_sdk: iphonesimulator9.3
-script: sh ci.sh
