adds support for segments and fixes found bugs

--- a/StravaKit.xcodeproj/xcshareddata/xcschemes/StravaDemo.xcscheme
+++ b/StravaKit.xcodeproj/xcshareddata/xcschemes/StravaDemo.xcscheme
@@ -44,7 +44,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "26AEBF931D664B9500481015"
-               BuildableName = "StravaKitTests-iOS.xctest"
+               BuildableName = "StravaKitTests.xctest"
                BlueprintName = "StravaKitTests-iOS"
                ReferencedContainer = "container:StravaKit.xcodeproj">
             </BuildableReference>
