--- a/StravaKit.xcodeproj/xcshareddata/xcschemes/StravaDemo.xcscheme
+++ b/StravaKit.xcodeproj/xcshareddata/xcschemes/StravaDemo.xcscheme
@@ -82,6 +82,13 @@
             ReferencedContainer = "container:StravaKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "JSONDebuggingEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
