fixes Mac target for building and testing

--- a/StravaKit.xcodeproj/xcshareddata/xcschemes/StravaKit-Mac.xcscheme
+++ b/StravaKit.xcodeproj/xcshareddata/xcschemes/StravaKit-Mac.xcscheme
@@ -71,6 +71,13 @@
             ReferencedContainer = "container:StravaKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "JSONDebuggingEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
