adds SwiftLint with most rules disabled #3

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,7 @@
       "taskName": "A: Build iOS Project",
       "isBuildCommand": true,
       "args": [
-        "${workspaceRoot}/tasks.sh build"
+        "${workspaceRoot}/scripts/tasks.sh build"
       ]
     },
     {
