--- a/StravaDemo/Info.plist
+++ b/StravaDemo/Info.plist
@@ -42,6 +42,8 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<key>NSAllowsLocalNetworking</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>UILaunchStoryboardName</key>
