--- a/StravaKit.xcodeproj/xcshareddata/xcschemes/StravaDemo.xcscheme
+++ b/StravaKit.xcodeproj/xcshareddata/xcschemes/StravaDemo.xcscheme
@@ -30,7 +30,7 @@
       codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "26AEBF761D664A2E00481015"
